crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_exact.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"pattern\":\"^abc$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::String(s) => s == "abc",
            _ => false,
        }
