crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_no_whitespace.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"pattern\":\"^\\\\S*$\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => !s.chars().any(__re::is_ecma_whitespace),
            _ => false,
        }
