crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_prefix.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"pattern\":\"^abc\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => s.starts_with("abc"),
            _ => false,
        }
