crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_properties_no_whitespace.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"additionalProperties\":false,\"patternProperties\":{\"^\\\\S*$\":{\"type\":\"string\"}}}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                let __object_pass = obj
                    .iter()
                    .all(|(key, instance)| {
                        let mut covered = false;
                        if !key.as_str().chars().any(__re::is_ecma_whitespace) {
                            if !(instance.is_string()) {
                                return false;
                            }
                            covered = true;
                        }
                        if !covered {
                            return false;
                        }
                        true
                    });
                __object_pass
            }
            _ => true,
        }
