crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_props_no_whitespace_uneval.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"patternProperties\":{\"^\\\\S*$\":{}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                ({
                    let __object_pass = obj.iter().all(|(key, instance)| { true });
                    __object_pass
                })
                    && (obj
                        .iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if !__re::contains_ecma_whitespace(key_str) {
                                true
                            } else {
                                false
                            }
                        }))
            }
            _ => false,
        }
