crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__pattern_props_prefix_and_regex_uneval.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"patternProperties\":{\"^a\":{},\"^b.c\":{}},\"type\":\"object\",\"unevaluatedProperties\":false}"
expression: is_valid_body(schema)
---
match instance {
            __Value::Object(obj) => {
                ({
                    let __object_pass = obj.iter().all(|(key, instance)| { true });
                    __object_pass
                })
                    && (obj
                        .iter()
                        .all(|(__key, __value)| {
                            let key_str = __key.as_str();
                            if key_str.starts_with("a")
                                || __jsonschema_regex_0(
                                    key_str,
                                    || __unfinished::schema_site(
                                        "/patternProperties/^b.c",
                                        None,
                                    ),
                                )
                            {
                                true
                            } else {
                                false
                            }
                        }))
            }
            _ => false,
        }
